Added to the gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,10 @@ README.html
 day16-17_DQ_Sampling.html
 day18.html
 day20_writeup.html
+ETH_1h.csv
+nyc_taxis.csv
+original.txt
+original2.txt
+seattle.csv
+survey_results_public.csv
+survey_results_schema.csv
